<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="514dp"
        app:srcCompat="@android:drawable/ic_menu_report_image" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_above="@+id/send"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:text="@string/tv_description"
        android:textSize="30sp" />

    <Button
        android:id="@+id/uploadImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/btn_upload" />

    <Button
        android:id="@+id/camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/btn_camera" />

    <Button
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="5dp"
        android:layout_toStartOf="@+id/uploadImg"
        android:layout_toEndOf="@+id/camera"
        android:text="@string/btn_send" />

</RelativeLayout>
