<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity2">

    <ImageView
        android:id="@+id/receivedImg"
        android:layout_width="match_parent"
        android:layout_height="420dp"
        app:srcCompat="@android:drawable/ic_menu_report_image" />

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_above="@+id/layout2"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp" >
        <TextView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:text="@string/class_name"
            android:textSize="40sp" />
        <TextView
            android:id="@+id/tv_class"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="40sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_above="@+id/btn_link"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">
        <TextView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:text="@string/class_acc"
            android:textSize="40sp" />
        <TextView
            android:id="@+id/tv_prob"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="40sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/class_link"
        android:textSize="40sp" />

</RelativeLayout>